--- a/vignettes/ordered_logit_preds.qmd
+++ b/vignettes/ordered_logit_preds.qmd
@@ -150,7 +150,7 @@ Each line corresponds to a log odds of combining categories into a **cumulative 
 
 ## Estimation
 
-Let's estimate an ordered logit model in `R`, from the `MASS` package. Data are collected **pre** or **post** election, and we want to see if support for electoral contestation behavior (here, attending a march) changes in support over this period -- for Trump voters versus Biden voters. This is specified to examine whether support for contestation varies depending upon electoral functions; a **winner-loser effect**
+Let's estimate an ordered logit model in `R`, from the `MASS` package. Data are collected **pre** or **post** election, and we want to see if support for electoral contestation behavior (here, attending a march) changes in support over this period -- for Trump voters versus Biden voters. This is specified to examine whether support for contestation varies depending upon electoral functions; a **winner-loser effect**.
 
 ```{r, warning = FALSE, message = FALSE, echo = TRUE}
 library(dplyr)
@@ -193,7 +193,6 @@ Instead of loading the entire package into your workspace with `devtools::`, thi
 
 ```{r}
 # devtools::install_github("crweber9874/regressionEffects")
-library(regressionEffects)
 ```
 
 There's nothing terribly complex about the functions in the package. They basically just provide a workflow that includes wrappers for using other packages, like `MASS`, `dplyr`, and `ggplot2`. 
@@ -202,6 +201,7 @@ First, create a **design** matrix corresponding to the things (from the model) t
 
 ```{r, warning = FALSE, message = FALSE, echo = TRUE}
 library(regressionEffects)
+
 design_matrix <- expand.grid(
    prepost = c(0,1),
    vote_trump = c(0,1)
@@ -211,9 +211,11 @@ predictions <- predict_ordinal_probs(
   design_matrix = design_matrix,
   model = my_model,
   n_draws = 1000)
+
 cat("The dimensions of this matrix:\n",
     dim(predictions)[1], "rows and", 
     dim(predictions)[2], "columns.")
+
 head(predictions)
 ```
 
@@ -222,9 +224,9 @@ Let's now create summaries.
 ```{r, warning = FALSE, message = FALSE, echo = TRUE}
 summarize_predictions(predictions) |> head()
 ```
+
+
 ```{r}
-library(tidyverse)  # This loads ggplot2, dplyr, tidyr, etc.
-library(regressionEffects)  # or library(weberUtilties)
 
 # Create the plot
 summarize_predictions(predictions)  %>%
@@ -243,6 +245,7 @@ summarize_predictions(predictions)  %>%
                   position = position_dodge(width = 0.5),
                   size = 0.8,
                   linewidth = 1) +
+  geom_line( position = position_dodge(width = 0.5)) + 
   facet_wrap(~vote_trump_label, ncol = 2) +
   labs(
     x = "",
@@ -257,135 +260,83 @@ summarize_predictions(predictions)  %>%
     panel.grid.major.x = element_blank(),
     strip.text = element_text(size = 12, face = "bold")
   ) +
-  scale_y_continuous(limits = c(0, 0.5), breaks = seq(0, 0.5, 0.1))
+  scale_y_continuous(limits = c(0, 0.5), breaks = seq(0, 0.5, 0.1)) 
 
 ```
+This is useful but sort of messy, because we don't know how many observations are in each of the cells. All we can see is that support for attending a march increases after the election (for Trump voters), but the opposite occurs for Biden voters. Let's scale the points by the number of observations.
 
-```{r, echo = TRUE}
-library(dplyr)
-library(MASS)
-devtools::load_all()
-load("~/Dropbox/github_repos/teaching/POL683_Fall24/advancedRegression/vignettes/dataActive.rda")
-dat = dataActive %>% 
-  mutate(
-    pid = recode(pid3, "Democrat" = 1, "Independent" = 2, "Republican" = 3, "Other" = 2, "Not sure" = 2),
-    ideo = ifelse(ideo5 == "Very liberal", 1, 0),
-    liberal = ifelse(ideo5 == "Liberal" | ideo5 == "Very liberal", 1, 0),
-    independent = ifelse(ideo5 == "Moderate", 1, 0),
-    conservative = ifelse(ideo5 == "Conservative" | ideo5 == "Very conservative", 1, 0),
-    int1 = conservative*authoritarianism,
-    int2 = independent*authoritarianism,
-  ) 
-my_model = glm(conservative ~  pid3 + authoritarianism, 
-               data = dat,
-               family = binomial(link = "logit"))
-
-
-design_matrix <- expand.grid(
-   pid3 = c("Republican", "Democrat", "Independent"),
-   authoritarianism = c(0,1)
- )
-
-predictions <- predict_logit_probs(
-  design_matrix = design_matrix,
-  model = my_model,
-  n_draws = 1000)
-
-summarize_predictions(predictions)
-```
-
-## Interpretation
-
--   How do we make sense of this?
-
--   Follow the same protocol as before.
-
--   Simulate data, generate predictions, and interpret the results.
-
-## Simulating Data, Generating Predictions
-
-- Finished: Point estimates for logit, ordered logit parameterization, summary function to summarize preds.
-
-- TD: Marginal Effects simulator.
-
-```{r}
-library(dplyr)
+```{r, warning = FALSE, message = FALSE, echo = TRUE}
 library(tidyr)
-devtools::load_all()
-load("~/Dropbox/github_repos/teaching/POL683_Fall24/advancedRegression/vignettes/dataActive.rda")
-dat = dataActive |>
+# Step 1: Construct the osberved counts from teh raw data. This is beneficial because we'll pass
+# this to ggplot to scale the points sizes.
+
+observed_counts <- sample_df %>%
+  group_by(prepost, vote_trump, attend_march) |>
+  summarise(n = n(), .groups = "drop") |>
+  rename(category = attend_march) %>%
+  mutate(category = factor(category)) |>
+  filter(!is.na(vote_trump))
+
+## Step 2: Take the prediction data and join it to the observed counts so we have one plotting data frame.
+# Then use that to generate the plot.
+summarize_predictions(predictions) |>
   mutate(
-    pid = recode(pid3, "Democrat" = 1, "Independent" = 2, "Republican" = 3, "Other" = 2, "Not sure" = 2),
-    conservative = ifelse(ideo5 == "Conservative" | ideo5 == "Very conservative", 1, 0),
-  ) 
-
-my_model = polr(as.factor(pid) ~ conservative, data = dat)
-
-design_matrix <- expand.grid(
-   conservative = 1
- )
-#'
-
-library(tidyverse)
-library(MASS)
-library(ggridges)
-
-load("~/Dropbox/github_repos/teaching/POL683_Fall24/advancedRegression/vignettes/dataActive.rda")
-
-dat <- dataActive |>
+    category = factor(category)
+  ) |>
+  left_join(observed_counts, by = c("prepost", "vote_trump", "category")) %>%
   mutate(
-    pid = recode(pid3, "Democrat" = 1, "Independent" = 2, "Republican" = 3, 
-                 "Other" = 2, "Not sure" = 2),
-    conservative = ifelse(ideo5 == "Conservative" | ideo5 == "Very conservative", 1, 0),
-  )
-
-my_model <- polr(as.factor(ideo5) ~ pid3, data = dat)
-
-# Create design matrix
-design_matrix <- expand.grid(
-  pid3 = unique(dat$pid3)
-)
-
-# Generate predictions
-predictions <- predict_ordinal_probs(
-  design_matrix = design_matrix,
-  model = my_model,
-  n_draws = 1000
-)
-
-# View structure
-head(predictions)
-summarize_predictions(predictions, group_vars = c("pid3", "category"))
-# Plot for conservatives
-
+    prepost_label = factor(prepost, 
+                          levels = c(0, 1), 
+                          labels = c("Pre-Election", "Post-Election")),
+    vote_trump_label = factor(vote_trump,
+                             levels = c(0, 1),
+                             labels = c("Biden Voters", "Trump Voters")),
+    n_scaled = n / sum(n) 
+  ) |>
+  ggplot(aes(x = prepost_label, y = mean_prob, color = category, group = category)) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "gray50") +
+  geom_pointrange(aes(ymin = lower_ci, ymax = upper_ci, size = n_scaled),
+                  position = position_dodge(width = 0.5),
+                  linewidth = 1, alpha = 0.3) +
+  # Change point offset for readability
+  geom_line(position = position_dodge(width = 0.5)) + 
+  facet_wrap(~vote_trump_label, ncol = 2) +
+  labs(
+    x = "",
+    y = "Predicted Probability",
+    color = "Response\nCategory",
+    size = "N",
+    title = "Predicted Probabilities by Interview Period and Vote Choice",
+    subtitle = "Points are mean probability with 95% confidence intervals"
+  ) +
+  theme_minimal() +
+  theme(
+    legend.position = "right",
+    panel.grid.major.x = element_blank(),
+    strip.text = element_text(size = 12, face = "bold")
+  ) +
+  scale_y_continuous(limits = c(0, 0.5), breaks = seq(0, 0.5, 0.1)) +
+  scale_size_continuous(range = c(0.5, 1.5)) +
+  # Color modifications
+  scale_color_manual(values = c("1" = "#E41A1C", "2" = "#377EB8", "3" = "#4DAF4A", "4" = "#984EA3", "5"= "pink"),
+ labels = c("1" = "Strongly Not Support", "2" = "Do Not Support", "3" = "Neutral", "4" = "Support", "5" = "Strongly Support")) +
+  guides(size = "none")
 
 ```
 
-```{r}
-library(tidyverse)
-library(ggridges)
-# Generate prediction data
-newdat =  expand.grid(conservative = 1,
-                                 independent = 0,
-                                 authoritarianism = c(0,1)) %>%
-            mutate(
-              int1 = conservative*authoritarianism,
-              int2 = independent*authoritarianism
-  ) ##j x 6
+## Marginal effects. 
 
-parameters = mvrnorm(1000, c(coefficients(my_model),  my_model$zeta), vcov(my_model)) %>% as.data.frame()
-# Keep parameters if in newdat
-data.frame(
-  authoritarianism = 1,
-  categoryDem = plogis(parameters$`1|2` - as.matrix(parameters[,names(parameters) %in% names(newdat)]) %*% t(as.matrix(newdat))[,1]) ,
-  categoryInd = plogis(parameters$`2|3` - as.matrix(parameters[,names(parameters) %in% names(newdat)]) %*% t(as.matrix(newdat))[,1]),
-  categoryRep = 1 - plogis(parameters$`2|3` - as.matrix(parameters[,names(parameters) %in% names(newdat)]) %*% t(as.matrix(newdat))[,1]) 
-  ) %>%
-  pivot_longer(cols = starts_with("category"), names_to = "category", values_to = "value") %>%
-ggplot(aes(x = value, y = category, fill = category)) +
-  geom_density_ridges(alpha = 0.7, color = "white") +
-  theme_ridges() +
-  labs(title = "Partisanship among Authoritarians", x = "Probability", y = "PID") + 
-  scale_fill_manual(values = c("blue", "purple", "red")) 
+Say are interest is in whether these changes are statistically significant at the conventional 0.05 level. We can use the `predict_logit_probs()` function to generate predicted probabilities from a binary logit model, and then summarize those predictions.
 
+```{r, warning = FALSE, message = FALSE, echo = TRUE}
+calculate_marginal_effect(
+  predictions,
+  focal_var = "prepost",
+  focal_contrast = c(0, 1),
+  moderator = "vote_trump"
+) -> dat
+
+ggMargins_categories(dat)
 ```
+
+This gives us the marginal effect of supporting attending a march, for Trump voters versus Biden voters, from pre- to post-election. The marginal effect is just the change from pre to post for each group
